# ravencheck

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md
doc/: migration.md  query.md
examples/: Cargo.toml  nat.rs  sets.rs
examples/src/: annotate_multi.rs  annotate_nat.rs  bool_match_bug.rs  def_and_eq.rs  doc_examples.rs  filter.rs  filter_nested_tuple.rs  import_test.rs  incomplete_map.rs  ite.rs  lib.rs  loopify.rs  main_example_nat.rs  main_example_set.rs  minimal.rs  minimal_filter.rs  minimal_polymorphic.rs  nat.rs  nat_u32.rs  recursive.rs  sets.rs  sets_using_alias.rs  solver.rs  sum.rs  sum_small.rs  totality.rs  type_parameter_sets.rs
lang/: Cargo.toml
lang/src/: builder.rs  cbpv.rs  constructions.rs  depth.rs  eliminate_match.rs  epr_check.rs  expand_funs.rs  expand_types.rs  gen.rs  lib.rs  neg_normal_form.rs  negate.rs  partial_eval.rs  prop.rs  rebuild.rs  register.rs  relevant.rs  rename.rs  sig.rs  simple_syn.rs  substitute.rs  syn_to_cbpv.rs  tag_recursive.rs  type_check.rs  utility.rs  vname.rs
lang/src/rir/: ast.rs  builder.rs  constructions.rs  from_syn.rs  ident.rs  igen.rs  mod.rs
lang/src/smt/: internal.rs  mod.rs  solver.rs  tests.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: lib.rs  rcc.rs  tests.rs
src/macro_examples/: annotate_multi.rs  annotate_nat.rs  bool_match_bug.rs  filter.rs  import_test.rs  ite.rs  loopify.rs  main_example_nat.rs  main_example_set.rs  minimal.rs  minimal_filter.rs  minimal_polymorphic.rs  mod.rs  multi_annotate.rs  nat.rs  nat_u32.rs  recursive.rs  sets.rs  sets_using_alias.rs  sum.rs  sum_small.rs  totality.rs  type_parameter_sets.rs
src/tests/: bool_fun.rs  cycle_checking.rs  induction.rs  matching.rs  misc.rs  mod.rs
