[workspace]
resolver = "2"
members = ["lang", "macros"]

[package]
name = "ravencheck"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/cuplv/ravencheck"
categories = ["development-tools::testing"]
exclude = [".gitignore"]

description = """
Decidable verification of Rust code using relational abstraction.
"""

[dependencies]
ravencheck-macros = "0.1.0"
ravenlang = "0.1.0"

[[example]]
name = "sets"
