[workspace]
resolver = "2"
members = ["lang", "macros"]

[package]
name = "ravencheck"
version = "0.1.1"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/cuplv/ravencheck"
categories = ["development-tools::testing"]
exclude = [".gitignore"]

description = """
Decidable verification of Rust code using relational abstraction.
"""

[dependencies]
ravencheck-macros = { path = "./macros" }
ravenlang = { path = "./lang" }

[[example]]
name = "sets"
