[workspace]
resolver = "2"
members = ["lang", "macros"]

[package]
name = "ravencheck"
version = "0.3.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/cuplv/ravencheck"
categories = ["development-tools::testing"]
exclude = [".gitignore"]

description = """
Decidable verification of Rust code using relational abstraction.
"""

[dependencies]
ravencheck-macros = { path = "./macros", version = "0.3.0" }
ravenlang = { path = "./lang", version = "0.3.0" }
syn = { version = "2.0", features = ["full","extra-traits"] }

[[example]]
name = "sets"
