[package]
name = "ravencheck-macros"
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/cuplv/ravencheck"

description = """
Procedural macros for ravencheck.
"""

[lib]
name = "ravencheck_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full","extra-traits"] }
